# qa-agent

./: .gitignore  REPORT.md  push_to_github.sh  run.sh
qa_agent/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
qa_agent/config/: default.yaml
qa_agent/config/applications/: airtel-console.yaml  coredge-console.yaml
qa_agent/config/flows/: airtel-full-nav.yaml  airtel-vm-smoke.yaml  my-recorded-flow.yaml  vm-flow.yaml
qa_agent/runs/04730e58-1469-443d-955f-c6686a63ea6e/: discovery.json  layer_timings.jsonl  meta.json  steps.jsonl
qa_agent/runs/0cb08947-20ec-4c33-9bad-a7d4847be919/: discovery.json  layer_timings.jsonl  meta.json  steps.jsonl
qa_agent/runs/187b4881-2f79-4318-8c6a-e9dd79c29d70/: discovery.json  layer_timings.jsonl  meta.json  steps.jsonl
qa_agent/runs/2c191c59-4af9-4bc4-9cba-9021c9568e5a/: discovery.json  layer_timings.jsonl  meta.json  steps.jsonl
qa_agent/runs/2d5cf16a-4b2e-42e3-bf53-6e4fb0185080/: discovery.json  layer_timings.jsonl  meta.json  steps.jsonl
qa_agent/runs/300854c1-a4c8-4ebd-82bb-439105c49578/: discovery.json  layer_timings.jsonl  meta.json  steps.jsonl
qa_agent/runs/457a1503-ab59-4bba-954d-06e5fc77ab00/: discovery.json  layer_timings.jsonl  meta.json  steps.jsonl
qa_agent/runs/a3c7a40c-5993-4edb-98d3-8ff636fd7494/: discovery.json  layer_timings.jsonl  meta.json  steps.jsonl
qa_agent/runs/a8b7fb18-02d5-4f08-965a-226e397b2c5f/: discovery.json  layer_timings.jsonl  meta.json  steps.jsonl
qa_agent/runs/b0205390-6f27-4dd3-abd6-c246bc2927ec/: discovery.json  layer_timings.jsonl  meta.json  (+1 more)
(+157 files in other folders)
