[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qa-agent"
version = "0.1.0"
description = "Generic, config-driven QA agent orchestration framework"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "playwright>=1.40",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pyyaml>=6.0",
    "anthropic>=0.30",
    "kubernetes>=29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
qa_agent = ["templates/*.html", "static/style.css"]
